--- a/.gitignore
+++ b/.gitignore
@@ -179,4 +179,8 @@ typings/
 # Ignore all local history of files
 .history
 
+archive
+node_modules
+package-lock.json
+
 # End of https://www.gitignore.io/api/node,intellij+all,visualstudiocode
